[chore] new Double -> Double.valueOf